feat: add browsable content to explore
